--- a/src/ui/components/GameBoardDisplay.scss
+++ b/src/ui/components/GameBoardDisplay.scss
@@ -1,5 +1,8 @@
 .gameBoardWrapper {
   position: relative;
+  display: inline-block;
+  height: 600px;
+  width: 600px;
 }
 
 .gameBoardCanvas {
@@ -10,4 +13,9 @@
   position: absolute;
   border-radius: 3px;
   box-shadow: 5px 5px 15px 5px rgba(0, 0, 0, 0.4);
+}
+
+.fullSize {
+  height: 100%;
+  width: 100%;
 }
