--- a/src/ui/components/gameBoardLayers/GameBoardLayers.scss
+++ b/src/ui/components/gameBoardLayers/GameBoardLayers.scss
@@ -1,5 +1,10 @@
-.gameBoardLayerCanvas {
+.gameBoardLayer {
   position: absolute;
   height: 100%;
   width: 100%;
+}
+
+.gameBoardBackground {
+  border-radius: 3px;
+  box-shadow: 5px 5px 15px 5px rgba(0, 0, 0, 0.4);
 }
