--- a/src/ui/components/gameBoardLayers/GameBoardLayers.scss
+++ b/src/ui/components/gameBoardLayers/GameBoardLayers.scss
@@ -8,3 +8,8 @@
   border-radius: 3px;
   box-shadow: 5px 5px 15px 5px rgba(0, 0, 0, 0.4);
 }
+
+.gameOverContainer {
+  background-color: #ffffff;
+  opacity: 0.7;
+}
