--- a/src/ui/components/gameBoardLayers/GameBoardLayers.scss
+++ b/src/ui/components/gameBoardLayers/GameBoardLayers.scss
@@ -12,4 +12,8 @@
 .gameOverContainer {
   background-color: #ffffff;
   opacity: 0.7;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
